Make numbers appear when clicked

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         Minesweeper
     </div>
     <div class="gameBox">
-        
+    </div>
+    <div class="ending">
     </div>
 </body>
 <script src="minesweeper.js"></script>
